--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "emu": "emulator -avd Pixel_2_API_28 -gpu host"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.7.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.2",
