--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-gesture-handler": "^1.5.2",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-reanimated": "^1.4.0",
+    "react-native-share": "^2.0.0",
     "react-native-switch": "^1.5.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
