--- a/ios/photoloot/Info.plist
+++ b/ios/photoloot/Info.plist
@@ -53,5 +53,26 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+  <key>CFBundleURLTypes</key>
+  <array>
+    <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fb660972327762779</string>
+      </array>
+    </dict>
+  </array>
+  <key>FacebookAppID</key>
+  <string>660972327762779</string>
+  <key>FacebookDisplayName</key>
+  <string>rohangoel</string>
+  <key>LSApplicationQueriesSchemes</key>
+  <array>
+    <string>fbapi</string>
+    <string>fb-messenger-share-api</string>
+    <string>fbauth2</string>
+    <string>fbshareextension</string>
+  </array>
+
 </dict>
 </plist>
