--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/async-storage": "^1.7.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-fbsdk": "^1.1.1",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-reanimated": "^1.4.0",
